--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 5432:5432
   redis:
-    image: redis:7.0.5
+    image: redis
     restart: always
     ports:
       - 6379:6379
